components/TabItem/TabItem.module.css
.tab {
  padding-right: 4px;
  margin-bottom: -1px;
  cursor: pointer;
}

.title {
  color: var(--textColor);
  padding: 0 5px 0 5px;
}

.active .title {
  color: var(--elliotPrimary);
  font-weight: bold;
  border-bottom: 2px solid var(--elliotPrimary);
  padding-bottom: 2px;
}

.title:hover {
  color: var(--elliotPrimary);
}

.icon {
  display: none;
  margin-right: -4px;
  top: 2px;
  position: relative;
  font-size: 1.1em;
}

/* Copy from bootstrap to be consistent with old website */
.dropdown {
  position: absolute;
  z-index: var(--zindex50);
  min-width: 160px;
  margin: 2px 0 0;
  font-size: 14px;
  list-style: none;
  background-color: #fff;
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  right: 15px;
}

.dropdown li a {
  color: var(--textColor);
  padding: 9px 20px;
  display: inline-block;
  width: 100%;
}

.dropdown li a:hover {
  text-decoration: none;
  background-color: #eee;
}

.linkIcon {
  padding-right: 12px;
  font-size: 1.3em;
  top: 4px;
  position: relative;
}

.youtube svg {
  color: red;
}

.twitch svg {
  color: #6442a4;
}

@media (min-width: 768px) {
  .tab {
    padding-right: 12px;
  }

  .icon {
    display: inline;
  }

  .dropdown {
    right: auto;
  }
}

